# Pathfinder

./: .gitignore  Cargo.toml  README.md  pyproject.toml
docs/: design-rationale.md
src/: __main__.py  lib.rs
src/api/: models.py  routes.py
src/db/: database.py
src/helpers/: archetypes.py  diagnostics.py  graph_helpers.py  visual_helpers.py
